fix(server): listing private repos, rm owner id on create, verify owner when update and delete
